[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
categories = ["multimedia::video", "multimedia::encoding", "api-bindings"]
description = "Rust idiomatic wrapper to libvpx"
keywords = ["vp9", "vp8", "webm", "video-encoder", "video-decoder"]
license = "MPL-2.0"
name = "vpx"
repository = "https://github.com/DiamondLovesYou/rust-vpx"
version = "0.3.0"

[dependencies]
libc = "0.2.20"

[dependencies.env-libvpx-sys]
path = "src/sys"

[lib]
name = "vpx"
path = "src/lib/lib.rs"
