[package]
name = "env-libvpx-sys"
authors = ["Richard Diamond <wichard@vitalitystudios.com>", "Kornel Lesiński <kornel@geekhood.net>"]
build = "build.rs"
categories = ["multimedia::video", "multimedia::encoding", "api-bindings"]
description = "Rust bindings to libvpx"
license = "MPL-2.0"
readme = "README.md"
keywords = ["vp9", "webm"]
links = "vpx"
repository = "https://github.com/astraw/rust-vpx"
version = "4.0.11"

[build-dependencies]
pkg-config = "0.3.5"
semver-parser = "0.7.0"

[build-dependencies.bindgen]
optional = true
version = "0.36.0"

[features]
default = []
generate = ["bindgen"]

[lib]
name = "vpx_sys"
