[package]
name = "env-libvpx-sys"
authors = ["Richard Diamond <wichard@vitalitystudios.com>", "Kornel Lesiński <kornel@geekhood.net>"]
build = "build.rs"
categories = ["multimedia::video", "multimedia::encoding", "api-bindings"]
description = "Rust bindings to libvpx"
license = "MPL-2.0"
readme = "README.md"
keywords = ["vp9", "webm"]
links = "vpx"
repository = "https://github.com/astraw/env-libvpx-sys"
version = "5.0.0"
edition = "2018"

[build-dependencies]
pkg-config = "0.3.5"

[build-dependencies.bindgen]
optional = true
version = "0.55.1"

[features]
default = []
generate = ["bindgen"]

[lib]
name = "vpx_sys"
