[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>", "Kornel Lesiński <kornel@geekhood.net>"]
build = "build.rs"
categories = ["multimedia::video", "multimedia::encoding", "api-bindings"]
description = "Rust bindings to libvpx"
documentation = "https://pornel.github.io/rust-vpx/vpx_sys/"
homepage = "https://github.com/pornel/rust-vpx/tree/master/src/sys"
license = "MPL-2.0"
links = "vpx"
name = "libvpx-native-sys"
repository = "https://github.com/pornel/rust-vpx"
version = "4.0.0"

[build-dependencies]
bindgen = "0.25.3"
pkg-config = "0.3.5"

[lib]
name = "vpx_sys"
path = "lib.rs"
