[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>", "Kornel Lesiński <kornel@geekhood.net>"]
build = "build.rs"
categories = ["multimedia::video", "multimedia::encoding", "api-bindings"]
description = "Rust bindings to libvpx"
documentation = "https://kornelski.github.io/rust-vpx/vpx_sys/"
homepage = "https://github.com/kornelski/rust-vpx/tree/master/src/sys"
license = "MPL-2.0"
readme = "README.md"
keywords = ["vp9", "webm"]
links = "vpx"
name = "libvpx-native-sys"
repository = "https://github.com/kornelski/rust-vpx"
version = "4.0.5"

[build-dependencies]
pkg-config = "0.3.5"
semver-parser = "0.7.0"

[build-dependencies.bindgen]
optional = true
version = "0.36.0"

[features]
default = []
generate = ["bindgen"]

[lib]
name = "vpx_sys"
path = "lib.rs"
